chore: upgrade to Java 21 (#296)